--- a/layouts/partials/article-link/card.html
+++ b/layouts/partials/article-link/card.html
@@ -141,12 +141,12 @@
         </h2>
       </a>
     </header>
-    <div class="text-sm text-neutral-500 dark:text-neutral-400">
+    <div class="card-meta text-sm text-neutral-500 dark:text-neutral-400">
       {{ partial "article-meta/basic.html" . }}
     </div>
     {{ if .Params.showSummary | default (.Site.Params.list.showSummary | default false) }}
       <div class="prose dark:prose-invert py-1">{{ .Summary | plainify }}</div>
     {{ end }}
   </div>
-  <div class="px-6 pt-4 pb-2"></div>
+  <div class="card-footer px-6 pt-4 pb-2"></div>
 </article>
