--- a/layouts/partials/image/optimized.html
+++ b/layouts/partials/image/optimized.html
@@ -23,10 +23,23 @@
 {{- $fetchpriority := .fetchpriority | default "auto" -}}
 {{- $zoomSrc := .zoomSrc -}}
 
-{{- $dir := path.Dir $source -}}
-{{- $base := path.BaseName $source -}}
-{{- $ext := path.Ext $source -}}
-{{- $basePath := printf "/img/optimized/%s/%s" $dir $base -}}
+{{/* Handle /img/ prefix - these are stored directly in optimized root */}}
+{{- $cleanSource := $source -}}
+{{- if strings.HasPrefix $source "/img/" -}}
+  {{- $cleanSource = strings.TrimPrefix "/img/" $source -}}
+{{- end -}}
+
+{{- $dir := path.Dir $cleanSource -}}
+{{- $base := path.BaseName $cleanSource -}}
+{{- $ext := path.Ext $cleanSource -}}
+
+{{/* Build base path depending on whether file is in root or subdirectory */}}
+{{- $basePath := "" -}}
+{{- if eq $dir "." -}}
+  {{- $basePath = printf "/img/optimized/%s" $base -}}
+{{- else -}}
+  {{- $basePath = printf "/img/optimized/%s/%s" $dir $base -}}
+{{- end -}}
 
 {{/* Build srcset strings */}}
 {{- $srcsetAvif := slice -}}
