style: remove left padding for inline code at line start

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -57,6 +57,20 @@
 }
 
 /* ========================================
+   Code
+   ======================================== */
+
+code:not(pre code) {
+    padding-left: 0.125rem !important;
+    padding-right: 0.125rem !important;
+}
+
+p code:first-child,
+li code:first-child {
+    padding-left: 0 !important;
+}
+
+/* ========================================
    Table
    ======================================== */
 
