style: remove background color from code elements

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -69,6 +69,10 @@
    Code
    ======================================== */
 
+code {
+    background-color: transparent !important;
+}
+
 code:not(pre code) {
     padding-left: 0.125rem !important;
     padding-right: 0.125rem !important;
